--- a/knapsack/DESCRIPTION
+++ b/knapsack/DESCRIPTION
@@ -5,5 +5,9 @@ Version: 1.0
 Date: 2019-10-08
 Author: Weng Hang Wong, Bjorn Hansen, Mahbuba Haque
 Maintainer: Mecon to <wenwo535@student.liu.se>
-Description:This package is created to study the effects of algorithms
+Description: This package is created to study the effects of algorithms.
 License: GPL-3
+Encoding: UTF-8
+RoxygenNote: 6.1.1
+Suggests: testthat
+Imports: utils
